bnf-spike/uk/co/itmoore/intellisubsteps/SubstepsStepDefinition.bnf

{
  parserClass="uk.co.itmoore.intellisubsteps.parser.SubstepDefitionParser"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="SubstepDef"
  psiImplClassSuffix="Impl"
  psiPackage="uk.co.itmoore.intellisubsteps.psi"
  psiImplPackage="uk.co.itmoore.intellisubsteps.psi.impl"

  elementTypeHolderClass="uk.co.itmoore.intellisubsteps.psi.SubstepDefTypes"
  elementTypeClass="uk.co.itmoore.intellisubsteps.psi.SubstepDefElementType"
  tokenTypeClass="uk.co.itmoore.intellisubsteps.psi.SubstepDefTokenType"

  tokens=[
  stepline='regexp:([^#]#*?.*)'
  ]
}



//feature ::= white comment tags header background? feature_elements comment?
//header ::= (!(scenario_outline | scenario | background) .)*
//feature_elements ::= (scenario | scenario_outline)*
//scenario ::= comment tags scenario_keyword space* lines_to_keyword white steps
//scenario_outline ::= comment tags scenario_outline_keyword space* lines_to_keyword white steps examples_sections white
//background ::= comment background_keyword space* lines_to_keyword? (eol+ | eof) steps


//multiline_arg ::=  table | py_string
//subtep_file ::= (a_substep_def)+
//a_substep_def ::= (substep_definition_line) | steps
//substep_definition_line ::= substep_definition_keyword space* (line_to_eol) comment_line
// white comment
//steps ::= step*
//step ::= comment line_to_eol (eol+ ) white



//lines_to_keyword ::= (!(eol space* reserved_words_and_symbols) .)*
//reserved_words_and_symbols ::= (step_keyword keyword_space) | scenario_keyword | scenario_outline_keyword | table | tag | comment_line
a_substep_definition_file ::= (a_substep_definition)*
a_substep_definition ::= substep_definition_line (stepline)*
substep_definition_line ::= substep_definition_keyword stepline

substep_definition_keyword ::= 'Define:'

comment ::= (comment_line white)*
comment_line ::= space* '#' space* line_to_eol


stepline ::= '([^#]#*?.*)' eol
line_to_eol ::= (!eol)*
space ::= ' ' | '\t'
eol ::= '\r'? '\n'
white ::= (space | eol)*
param ::= '<([^>].*)>'
//keyword_space ::= ' '
